tests/should_fail/opaque_unproveable.coma
module M_opaque_unproveable__test
  use creusot.prelude.Any
  
  predicate opaque
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec test (return' (x: ())) = (! bb0
    [ bb0 = s0 [ s0 = {[@expl:assertion] opaque} s1 | s1 = return''0 {_0} ] ] [ & _0: () = Any.any_l () ])
    [ return''0 (result: ()) -> (! return' {result}) ]
end
